email + email template + react email + resend

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,20 @@
 HOST=http://localhost:3000
+
+# ----------------------------
+# Stripe
+# ----------------------------
+
 STRIPE_SECRET_KEY=
+
+# ----------------------------
+# Host Email (Implemented, but not used)
+# ----------------------------
+
+HOST_EMAIL=
+HOST_PASS=
+
+# ----------------------------
+# Resend
+# ----------------------------
+
+RESEND_API_KEY=
