--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
+    "@react-email/components": "^0.0.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "lucide-react": "^0.241.0",
     "next": "13.4.5",
+    "nodemailer": "^6.9.3",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
+    "resend": "^0.15.3",
     "stripe": "^12.9.0",
     "tailwindcss": "3.3.2",
     "yup": "^1.2.0"
